Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33523

Android: QGLWidget segfault

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.2.0
    • 5.2.0
    • GUI: OpenGL
    • None
    • Android
    • 61e0534aff440809f3388245f36e482c22912832

      Since Android does not support WA_NativeWindow, we get a null pointer access when setting up the GL context from the QGLWidget constructor, since the window is not created yet.

        For Gerrit Dashboard: QTBUG-33523
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes